--- a/Project 1 Weather App/index.html
+++ b/Project 1 Weather App/index.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
             </div>
-            <div class="forecast"></div>
+            <div class="forecast" style="display: grid;"></div>
         </div>
     </section>
     <script src="/script.js"></script>
