--- a/Project 1 Weather App/index.html
+++ b/Project 1 Weather App/index.html
@@ -24,7 +24,7 @@
             </form>
             <div class="weather">
                 <img src="#" alt="" class="weather-img">
-                <p style="font-size: 16px;" class="conditions"></p>
+                <p style="font-size: 16px; text-align: center;" class="conditions"></p>
                 <p class="cityName"></p>
             </div>
             <div class="details">
@@ -59,7 +59,9 @@
                     </div>
                 </div>
             </div>
-            <div class="forecast" style="display: grid;"></div>
+            <h5 style="margin-top: 30px; text-align: center;" class="days-count"></h5>
+            <div class="forecast">
+            </div>
         </div>
     </section>
     <script src="/script.js"></script>
