Weather App #Project 1

--- a/Project 1 Weather App/index.html
+++ b/Project 1 Weather App/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/assets/images/fav-icon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -30,16 +31,16 @@
             <div class="details">
                 <div class="details-layout">
                     <img src="/assets/temp-cold.svg" alt="" width="30px">
-                    <div>
+                    <div class="details-text">
                         <p style="font-size: 20px;" class="cityTemp"></p>
-                        <p style="font-size: 13px;">Temperature</p>
+                        <p style="font-size: 12px;">Temperature</p>
                     </div>
                 </div>
                 <div class="details-layout">
                     <img src="/assets/temperature-feels-like.svg" alt="" width="30px">
                     <div>
                         <p style="font-size: 20px;" class="feelLike"></p>
-                        <p style="font-size: 13px;">Feels Like</p>
+                        <p style="font-size: 12px;">Feels Like</p>
                     </div>
                 </div>
             </div>
@@ -48,18 +49,18 @@
                     <img src="/assets/images/humidity.png" alt="" width="30px">
                     <div>
                         <p style="font-size: 20px;" class="humidity"></p>
-                        <p style="font-size: 13px;">Humidity</p>
+                        <p style="font-size: 12px;">Humidity</p>
                     </div>
                 </div>
                 <div class="details-layout">
                     <img src="/assets/images/wind.png" alt="" width="30px">
                     <div>
                         <p style="font-size: 20px;" class="windSpeed"></p>
-                        <p style="font-size: 13px;">Wind</p>
+                        <p style="font-size: 12px;">Wind</p>
                     </div>
                 </div>
             </div>
-            <h5 style="margin-top: 30px; text-align: center;" class="days-count"></h5>
+            <h5 class="days-count"></h5>
             <div class="forecast">
             </div>
         </div>
