--- a/Project 2 Movie Search App/index.html
+++ b/Project 2 Movie Search App/index.html
@@ -1,13 +1,45 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movie Search App</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-red-600">
-  <h1 class="text-3xl font-bold underline flex justify-center items-center">
-    Hello world!
-  </h1>
+<body class="bg-gray-100">
+    <div class="container mx-auto p-4">
+        <header class="text-center mb-4">
+            <h1 class="text-4xl font-bold text-gray-800">Movie Search App</h1>
+        </header>
+
+        <!-- Search Bar -->
+        <form class="flex justify-center mb-8">
+            <input id="searchInput" type="text" placeholder="Search for a movie..." class="border-2 border-gray-300 p-2 rounded-l-lg w-1/2">
+            <button type="submit" class="bg-blue-500 text-white p-2 rounded-r-lg hover:bg-blue-600">Search</button>
+        </form>
+
+        <!-- Movie Results -->
+        <div id="movieResults" class="grid grid-cols-1 md:grid-cols-3 gap-4">
+            <!-- Example Movie Card -->
+            <div class="bg-white shadow-md rounded-lg overflow-hidden">
+                <img src="https://via.placeholder.com/300x400" alt="Movie Poster" class=" movie-poster  w-full h-60">
+                <div class="p-4">
+                    <h2 class="title text-lg font-bold mb-2"></h2>
+                    <p class="release-Year text-gray-600"></p>
+                    <button class="mt-2 text-blue-500 hover:underline more-info">More Info</button>
+                </div>
+            </div>
+        </div>
+        <p class="error-message text-cente text-xl font-semibold text-red-500 hidden"></p>
+        <!-- Detailed Movie Information -->
+        <div id="movieDetail" class="hidden mt-8 bg-white p-6 rounded-lg shadow-lg">
+            <h2 class="text-2xl font-bold mb-4">Movie Title</h2>
+            <p><strong>Director:</strong> Director Name</p>
+            <p><strong>Actors:</strong> Actor 1, Actor 2, Actor 3</p>
+            <p class="mt-4"><strong>Plot:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id sagittis odio.</p>
+        </div>
+    </div>
+
+ <script src="./script.js"></script>
 </body>
 </html>
