--- a/Project 2 Movie Search App/index.html
+++ b/Project 2 Movie Search App/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <p class="error-message text-cente text-xl font-semibold text-red-500 hidden"></p>
+        <p class="error-message text-center text-2xl font-semibold text-red-500 hidden"></p>
         <!-- Detailed Movie Information -->
         <div id="movieDetail" class="hidden mt-8 bg-white p-6 rounded-lg shadow-lg">
             <h2 class="text-2xl font-bold mb-4">Movie Title</h2>
