--- a/Project 2 Movie Search App/index.html
+++ b/Project 2 Movie Search App/index.html
@@ -1,37 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Search App</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="output.css">
+    <style>
+        /* Keyframes for spin animation used in the loading spinner */
+        @keyframes spin {
+            0% {
+                transform: scale(.6) rotate(0deg);
+            }
+            100% {
+                transform: scale(.4) rotate(360deg);
+            }
+        }
+    </style>
 </head>
+
 <body class="bg-gray-100">
     <div class="container mx-auto p-4">
+        <!-- Header Section -->
         <header class="text-center mb-4">
             <h1 class="text-4xl font-bold text-gray-800">Movie Search App</h1>
         </header>
 
-        <!-- Search Bar -->
+        <!-- Search Bar Section -->
         <form class="flex justify-center mb-8">
-            <input id="searchInput" type="text" placeholder="Search for a movie..." class="border-2 border-gray-300 p-2 rounded-l-lg w-1/2">
+            <input id="searchInput" type="text" placeholder="Search for a movie..."
+                class="border-2 border-gray-300 p-2 rounded-l-lg w-1/2">
             <button type="submit" class="bg-blue-500 text-white p-2 rounded-r-lg hover:bg-blue-600">Search</button>
         </form>
 
-        <!-- Movie Results -->
-        <div id="movieResults" class="grid grid-cols-1 md:grid-cols-3 gap-4">
+        <!-- Movie Results Section -->
+        <div id="movieResults" class="flex flex-col justify-center items-center">
             <!-- Example Movie Card -->
-            <div class="bg-white shadow-md rounded-lg overflow-hidden">
-                <img src="https://via.placeholder.com/300x400" alt="Movie Poster" class=" movie-poster  w-full h-60">
-                <div class="p-4">
-                    <h2 class="title text-lg font-bold mb-2"></h2>
-                    <p class="release-Year text-gray-600"></p>
-                    <button class="mt-2 text-blue-500 hover:underline more-info">More Info</button>
+            <div class="bg-white w-96 shadow-md rounded-lg overflow-hidden">
+                <div class="loading-text hidden justify-center items-center">
+                    <!-- Spinner Animation -->
+                    <div class="border-t-4 border-black border-dotted rounded-full w-9 h-9 animate-spin"></div>
+                    <p class="text-lg font-semibold">Loading...</p>
+                </div>
+                <div class="onLoading">
+                    <!-- Movie Poster Image -->
+                    <img src="https://via.placeholder.com/600x400?text=Search%20for%20a%20Movie" alt="Movie Poster"
+                        class="movie-poster w-full h-60">
+                    <div class="p-4">
+                        <!-- Movie Title -->
+                        <h2 class="title text-lg font-bold mb-2"></h2>
+                        <!-- Movie Release Year -->
+                        <p class="release-Year text-gray-600"></p>
+                        <!-- More Info Button -->
+                        <button class="mt-2 text-blue-500 hover:underline more-info">More Info</button>
+                    </div>
                 </div>
             </div>
         </div>
+        
+        <!-- Error Message Section -->
         <p class="error-message text-center text-2xl font-semibold text-red-500 hidden"></p>
-        <!-- Detailed Movie Information -->
+
+        <!-- Detailed Movie Information Section -->
         <div id="movieDetail" class="hidden mt-8 bg-white p-6 rounded-lg shadow-lg">
             <h2 class="text-2xl font-bold mb-4">Movie Title</h2>
             <p><strong>Director:</strong> Director Name</p>
@@ -40,6 +70,8 @@
         </div>
     </div>
 
- <script src="./script.js"></script>
+    <!-- Link to JavaScript file -->
+    <script src="./script.js"></script>
 </body>
+
 </html>
