--- a/Project 2 Movie Search App/index.html
+++ b/Project 2 Movie Search App/index.html
@@ -62,11 +62,12 @@
         <p class="error-message text-center text-2xl font-semibold text-red-500 hidden"></p>
 
         <!-- Detailed Movie Information Section -->
-        <div id="movieDetail" class="hidden mt-8 bg-white p-6 rounded-lg shadow-lg">
-            <h2 class="text-2xl font-bold mb-4">Movie Title</h2>
-            <p><strong>Director:</strong> Director Name</p>
-            <p><strong>Actors:</strong> Actor 1, Actor 2, Actor 3</p>
-            <p class="mt-4"><strong>Plot:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id sagittis odio.</p>
+        <div id="movieDetail" class="hidden  bg-black/60 text-white p-6 rounded-lg shadow-lg">
+            <h2 class="movie-title text-2xl font-bold mb-4"></h2>
+            <h2 class="movie-type text-2xl font-bold mb-4"></h2>
+            <p class="movie-director"></p>
+            <p class="movie-actors"></p>
+            <p class="mt-4 plot"></p>
         </div>
     </div>
 
