--- a/Project 5 E-Com/Abubakar Store Production/index.html
+++ b/Project 5 E-Com/Abubakar Store Production/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="/images/shopping-cart-.svg" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <title>Discover Abubakar Store</title>
+  <script type="module" crossorigin src="/assets/showToast-7mOh84xe.js"></script>
+  <script type="module" crossorigin src="/assets/main-Cu4lXPhe.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/showToast-CvWek7Gs.css">
 </head>
 
 <body class="font-poppins bg-[#f7f7f7]">
@@ -533,7 +535,6 @@
     </div>
   </footer>
   <!-- Footer Sec Ends Here -->
-  <script type="module" src="main.js"></script>
   <script src="/additionalScripts/mobile-Menu.js"></script>
 </body>
 
